Added reports for bg, bn, ca, da, et, fi, hbs, he, hi, lt, lv, ms, sk, sl, sq, ta, ur with langcounts info

--- a/reports/mono-1.2/HPLT-docslite.bg.yaml
+++ b/reports/mono-1.2/HPLT-docslite.bg.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.bg.tsv
 docs_avg_lm: '[[0.1, 17], [0.2, 4159], [0.3, 39863], [0.4, 261419], [0.5, 881603],
   [0.6, 1497569], [0.7, 779908], [0.8, 111381], [0.9, 2224], [1.0, 1]]'
 docs_collections: '[["cc40", 2231180], ["wide16", 1346964]]'
@@ -659,9 +660,41 @@ docs_wds: '[[0.0, 37604], [0.1, 1775], [0.2, 1942], [0.3, 2103], [0.4, 2554], [0
   [8.5, 55800], [8.6, 53205], [8.7, 50466], [8.8, 47053], [8.9, 42221], [9.0, 37849],
   [9.1, 34781], [9.2, 32976], [9.3, 30821], [9.4, 27944], [9.5, 23420], [9.6, 17633],
   [9.7, 10279], [9.8, 5002], [9.9, 1714], [10.0, 308]]'
-corpus: HPLT-docslite.bg.tsv
 sentence_pairs: 538385172
 src_bytes: 50.14 GB
+src_langs: '[["bg", 541799678], ["ru", 134476328], ["en", 94924692], ["uk", 21223395],
+  ["mk", 20080479], ["hbs_cyr", 18643537], ["fr", 16618872], ["de", 15424866], ["es",
+  6941264], ["it", 4194671], ["cs", 3405840], ["sv", 2598200], ["hbs_lat", 2083494],
+  ["nl", 2053722], ["vi", 1974174], ["pt", 1734394], ["zh", 1724566], ["pl", 1543022],
+  ["be", 1487232], ["ceb", 1485933], ["ja", 1357220], ["ca", 1027071], ["ba", 976210],
+  ["nb", 914473], ["kk", 888786], ["tr", 872450], ["oc", 752688], ["ro", 694129],
+  ["id", 627064], ["hu", 606558], ["tg", 575359], ["da", 547896], ["fi", 539048],
+  ["el", 489852], ["sl", 471708], ["ky", 421762], ["eo", 371416], ["tt", 339966],
+  ["eu", 332862], ["fa", 305006], ["ko", 298925], ["mn", 293281], ["lt", 280427],
+  ["ar", 276451], ["cv", 250444], ["km", 188325], ["et", 179762], ["sk", 179506],
+  ["os", 158293], ["uz", 155527], ["la", 146856], ["ce", 135486], ["az", 125917],
+  ["ms", 122052], ["mhr", 114642], ["th", 107035], ["lv", 101676], ["he", 86346],
+  ["nds", 81545], ["krc", 71982], ["hi", 70601], ["gl", 70102], ["bar", 61083], ["tl",
+  57585], ["sq", 56890], ["war", 53501], ["br", 51570], ["lez", 51316], ["af", 51237],
+  ["ml", 49578], ["cy", 48214], ["hy", 46691], ["bxr", 46116], ["ur", 43650], ["sah",
+  43228], ["kn", 42833], ["bn", 42380], ["ne", 41127], ["is", 38849], ["ta", 38391],
+  ["kv", 36501], ["als", 36301], ["fy", 35961], ["nn", 32068], ["ka", 28992], ["ht",
+  27252], ["io", 26629], ["jv", 26273], ["pms", 25783], ["lb", 25730], ["av", 21061],
+  ["my", 20284], ["ia", 18451], ["wuu", 18198], ["te", 17613], ["jbo", 17535], ["sco",
+  17222], ["gu", 16936], ["mr", 14355], ["si", 12021], ["diq", 11936], ["ilo", 11793],
+  ["ga", 11770], ["pa", 11270], ["rue", 11147], ["xal", 10685], ["mrj", 10037], ["ku",
+  9980], ["sw", 9956], ["sa", 9192], ["gd", 8376], ["yue", 7589], ["am", 7535], ["ast",
+  6131], ["arz", 5763], ["myv", 5635], ["min", 5121], ["ug", 5008], ["xmf", 4871],
+  ["an", 4870], ["mwl", 4581], ["ps", 4546], ["vo", 4447], ["mzn", 4262], ["or", 4177],
+  ["su", 3941], ["lmo", 3898], ["ie", 3715], ["so", 3542], ["mg", 3281], ["ckb", 3201],
+  ["pnb", 2858], ["bo", 2772], ["lo", 2710], ["hsb", 2696], ["tk", 2671], ["gom",
+  2499], ["mt", 2459], ["kw", 2383], ["li", 2283], ["wa", 2183], ["as", 2161], ["eml",
+  2038], ["dv", 1872], ["azb", 1821], ["qu", 1737], ["new", 1721], ["tyv", 1703],
+  ["rm", 1453], ["yo", 1449], ["cbk", 1242], ["gn", 1222], ["vep", 1162], ["frr",
+  1109], ["sd", 1086], ["pfl", 1043], ["nap", 1003], ["scn", 866], ["bpy", 810], ["gv",
+  765], ["pam", 720], ["vec", 537], ["yi", 535], ["sc", 534], ["bcl", 432], ["nah",
+  400], ["dsb", 368], ["mai", 341], ["bh", 245], ["vls", 185], ["lrc", 87], ["co",
+  60], ["hif", 25], ["dty", 2]]'
 src_sent_tokens: '[[0, 9625687], [1, 131105565], [2, 70822904], [3, 57009940], [4,
   35636638], [5, 30305177], [6, 22003804], [7, 19524338], [8, 15362213], [9, 13903056],
   [10, 12296530], [11, 10241854], [12, 9135495], [13, 7529054], [14, 7074351], [15,
