--- a/reports/mono-1.2/HPLT-docslite.bn.yaml
+++ b/reports/mono-1.2/HPLT-docslite.bn.yaml
@@ -389,6 +389,37 @@ docs_wds: '[[0.0, 181588], [0.1, 4189], [0.2, 5098], [0.3, 6532], [0.4, 6634], [
   614], [9.9, 209], [10.0, 36]]'
 sentence_pairs: 330215118
 src_bytes: 40.7 GB
+src_langs: '[["bn", 244504907], ["en", 59687599], ["bpy", 3738491], ["fr", 3253147],
+  ["es", 3005687], ["as", 2137629], ["de", 2034919], ["it", 1358441], ["cs", 900318],
+  ["nl", 633092], ["ru", 609756], ["th", 570403], ["sv", 546379], ["id", 522750],
+  ["pt", 438519], ["fa", 427759], ["pl", 388076], ["ca", 363243], ["da", 357152],
+  ["tr", 350266], ["zh", 334780], ["ja", 316769], ["nb", 306515], ["eo", 267725],
+  ["ceb", 259361], ["ar", 257144], ["hbs_lat", 247327], ["hi", 203879], ["fi", 169486],
+  ["hu", 138562], ["az", 133457], ["vi", 118738], ["el", 116867], ["ko", 86344], ["uk",
+  80803], ["ms", 78256], ["ne", 75898], ["eu", 68694], ["ta", 61321], ["oc", 58300],
+  ["et", 55136], ["ro", 51476], ["vo", 50637], ["la", 49433], ["ur", 48186], ["lt",
+  44373], ["lv", 38458], ["te", 38243], ["sl", 32015], ["tl", 31291], ["sk", 29583],
+  ["mzn", 28668], ["mr", 26989], ["br", 26044], ["fy", 25802], ["mk", 25250], ["kn",
+  24184], ["hy", 23364], ["ml", 22361], ["bar", 20988], ["pa", 19756], ["gu", 19277],
+  ["bh", 18838], ["nds", 18536], ["he", 16445], ["pms", 15170], ["mt", 14676], ["km",
+  14331], ["bg", 13890], ["uz", 13306], ["ga", 12435], ["sq", 12427], ["kk", 12412],
+  ["my", 12234], ["gl", 12127], ["war", 11762], ["sw", 10989], ["ps", 10534], ["tg",
+  9911], ["ckb", 9806], ["cy", 8438], ["or", 8297], ["als", 6612], ["af", 6394], ["ht",
+  6330], ["am", 5759], ["ba", 5616], ["so", 5393], ["ia", 5372], ["gd", 5334], ["ky",
+  5251], ["ast", 5237], ["lb", 4680], ["si", 4491], ["su", 4447], ["nn", 4387], ["new",
+  4298], ["mn", 4285], ["jbo", 4192], ["arz", 4142], ["ka", 4024], ["is", 3883], ["ilo",
+  3854], ["ku", 3674], ["jv", 3324], ["mwl", 3259], ["io", 3155], ["ce", 3052], ["sa",
+  3046], ["bo", 2677], ["sco", 2630], ["pnb", 2628], ["be", 2531], ["mg", 2082], ["ie",
+  1986], ["tt", 1859], ["cv", 1806], ["an", 1680], ["frr", 1525], ["pam", 1478], ["sd",
+  1297], ["hbs_cyr", 1261], ["xmf", 1244], ["vls", 1121], ["wuu", 1099], ["lo", 1097],
+  ["li", 1074], ["dty", 1048], ["rm", 1016], ["azb", 949], ["dsb", 910], ["ug", 887],
+  ["gv", 792], ["kw", 789], ["gn", 737], ["mai", 714], ["diq", 707], ["nah", 693],
+  ["gom", 692], ["dv", 672], ["lmo", 659], ["mhr", 623], ["bxr", 600], ["yi", 588],
+  ["wa", 558], ["co", 532], ["yue", 515], ["min", 484], ["tk", 426], ["qu", 370],
+  ["yo", 348], ["hsb", 342], ["cbk", 312], ["bcl", 286], ["sah", 211], ["os", 180],
+  ["vep", 179], ["scn", 161], ["myv", 143], ["tyv", 126], ["krc", 117], ["lrc", 80],
+  ["hif", 67], ["eml", 67], ["nap", 62], ["sc", 42], ["mrj", 35], ["kv", 28], ["vec",
+  24], ["xal", 14], ["lez", 12], ["pfl", 10], ["av", 9], ["rue", 3]]'
 src_sent_tokens: '[[0, 3308526], [1, 88782738], [2, 45134054], [3, 23399461], [4,
   22468835], [5, 20319632], [6, 17762343], [7, 16271148], [8, 13381096], [9, 10945695],
   [10, 8698303], [11, 7129190], [12, 5252667], [13, 4014986], [14, 3203415], [15,
