--- a/reports/mono-1.2/HPLT-docslite.ca.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ca.yaml
@@ -546,6 +546,39 @@ docs_wds: '[[0.0, 133460], [0.1, 4642], [0.2, 4765], [0.3, 4860], [0.4, 6082], [
   [9.5, 14003], [9.6, 9958], [9.7, 5810], [9.8, 2884], [9.9, 935], [10.0, 169]]'
 sentence_pairs: 623010179
 src_bytes: 33.42 GB
+src_langs: '[["ca", 353525103], ["en", 74775922], ["es", 55925117], ["fr", 38561609],
+  ["pt", 23252094], ["de", 18081664], ["it", 17060092], ["cs", 5699394], ["sv", 3186647],
+  ["hu", 2545597], ["nl", 2539852], ["ru", 2119914], ["oc", 2001733], ["nb", 1884021],
+  ["id", 1876279], ["eo", 1567274], ["ceb", 1485209], ["pl", 1469402], ["ro", 1406037],
+  ["tr", 897542], ["gl", 885097], ["hbs_lat", 850078], ["ja", 834025], ["zh", 818788],
+  ["eu", 751331], ["lt", 713998], ["ast", 669235], ["fi", 630312], ["uk", 447187],
+  ["la", 437982], ["da", 398065], ["sk", 369116], ["vi", 357877], ["ia", 325091],
+  ["ms", 260664], ["br", 252836], ["fa", 237738], ["et", 221898], ["el", 194634],
+  ["war", 174279], ["az", 164916], ["ko", 145481], ["an", 142214], ["hi", 132659],
+  ["ar", 116692], ["sl", 105251], ["wa", 100724], ["sq", 88450], ["jv", 87840], ["th",
+  87659], ["lv", 85036], ["km", 80018], ["nds", 77178], ["is", 76542], ["mk", 69990],
+  ["sco", 68106], ["he", 66016], ["fy", 65069], ["tl", 62177], ["eml", 57445], ["nn",
+  57168], ["mai", 55662], ["uz", 54426], ["ur", 54249], ["gu", 52955], ["jbo", 50980],
+  ["hy", 50133], ["ie", 49370], ["gd", 44855], ["bg", 44832], ["kk", 44673], ["rm",
+  42522], ["cy", 41887], ["te", 41152], ["ne", 40923], ["ml", 40579], ["ta", 39861],
+  ["ce", 37886], ["ga", 36471], ["su", 36442], ["pms", 35543], ["mg", 35478], ["mwl",
+  33273], ["ht", 31394], ["kn", 30638], ["af", 30317], ["si", 29503], ["bn", 29461],
+  ["io", 28392], ["lb", 27584], ["mn", 24132], ["bar", 23345], ["als", 21926], ["my",
+  21439], ["lmo", 19411], ["os", 18254], ["ku", 17796], ["pa", 16229], ["ka", 16192],
+  ["min", 15787], ["sw", 15297], ["vec", 11406], ["pam", 10668], ["mr", 10513], ["be",
+  9141], ["qu", 8532], ["wuu", 8211], ["ilo", 8013], ["gom", 7798], ["sc", 7703],
+  ["tt", 7587], ["arz", 7273], ["mt", 7215], ["vo", 6769], ["ckb", 6064], ["frr",
+  5585], ["xal", 5568], ["nap", 5528], ["kw", 5202], ["gn", 4927], ["mhr", 4889],
+  ["azb", 4729], ["ba", 4705], ["so", 4415], ["pnb", 4261], ["diq", 4243], ["cv",
+  4232], ["sd", 4022], ["co", 3883], ["yue", 3515], ["ps", 3467], ["mzn", 3435], ["gv",
+  3377], ["sa", 3320], ["cbk", 3267], ["bo", 3185], ["new", 3028], ["as", 2950], ["yi",
+  2885], ["am", 2714], ["xmf", 2676], ["yo", 2601], ["tg", 2522], ["or", 2453], ["vls",
+  2349], ["tk", 2199], ["hsb", 1852], ["li", 1772], ["bxr", 1746], ["ug", 1445], ["lo",
+  1397], ["ky", 1362], ["mrj", 1335], ["bcl", 1328], ["nah", 1098], ["dv", 1082],
+  ["bh", 1021], ["scn", 968], ["bpy", 930], ["kv", 885], ["hbs_cyr", 858], ["tyv",
+  644], ["sah", 577], ["vep", 368], ["lrc", 353], ["lez", 249], ["myv", 236], ["dsb",
+  232], ["krc", 210], ["hif", 146], ["pfl", 100], ["av", 49], ["dty", 13], ["rue",
+  11]]'
 src_sent_tokens: '[[0, 8441472], [1, 112514631], [2, 68790420], [3, 62220261], [4,
   45035853], [5, 46359290], [6, 52590210], [7, 37932621], [8, 27370841], [9, 18783193],
   [10, 12506312], [11, 11645941], [12, 11049062], [13, 7342909], [14, 6319636], [15,
