--- a/reports/mono-1.2/HPLT-docslite.da.yaml
+++ b/reports/mono-1.2/HPLT-docslite.da.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.da.tsv
 docs_avg_lm: '[[0.0, 16], [0.1, 150], [0.2, 4460], [0.3, 55674], [0.4, 396616], [0.5,
   1428654], [0.6, 2571371], [0.7, 1392877], [0.8, 121329], [0.9, 2864], [1.0, 4]]'
 docs_collections: '[["cc40", 2968770], ["wide15", 2472933], ["wide16", 532312]]'
@@ -563,9 +564,41 @@ docs_wds: '[[0.0, 176333], [0.1, 6145], [0.2, 6449], [0.3, 7376], [0.4, 8818], [
   [8.7, 72006], [8.8, 69176], [8.9, 55823], [9.0, 45070], [9.1, 36634], [9.2, 32269],
   [9.3, 27398], [9.4, 22409], [9.5, 17547], [9.6, 12536], [9.7, 7959], [9.8, 4108],
   [9.9, 2635], [10.0, 1267]]'
-corpus: HPLT-docslite.da.tsv
 sentence_pairs: 726820478
 src_bytes: 43.17 GB
+src_langs: '[["da", 548662864], ["en", 185966144], ["de", 46519117], ["sv", 37547941],
+  ["nb", 33707795], ["fr", 26015676], ["nl", 14885189], ["it", 12957187], ["es", 11308699],
+  ["cs", 10393511], ["pl", 6950820], ["nn", 4923024], ["pt", 4388534], ["fi", 3997278],
+  ["tr", 3582911], ["id", 3280792], ["ro", 3280761], ["et", 3034003], ["ru", 2790815],
+  ["hu", 2449476], ["ca", 2222294], ["hbs_lat", 2027162], ["eo", 1979984], ["ceb",
+  1636388], ["sl", 1583051], ["zh", 1499545], ["ja", 992423], ["uk", 946254], ["ms",
+  845231], ["vi", 838864], ["af", 749986], ["fy", 678398], ["az", 645740], ["eu",
+  625330], ["ar", 582534], ["km", 565918], ["lt", 562432], ["oc", 552385], ["la",
+  532954], ["sk", 504116], ["ko", 388099], ["el", 379922], ["fa", 372604], ["nds",
+  362881], ["gl", 336926], ["als", 327239], ["lb", 309907], ["sq", 291226], ["th",
+  271402], ["uz", 204766], ["lv", 195202], ["war", 179869], ["mg", 159313], ["is",
+  156572], ["cy", 150518], ["ur", 125688], ["pms", 119254], ["ka", 117233], ["ml",
+  112551], ["br", 104543], ["jv", 97845], ["tl", 97335], ["he", 93762], ["kn", 92222],
+  ["bg", 91462], ["hi", 75348], ["kk", 70143], ["ckb", 64583], ["mk", 63653], ["ia",
+  61738], ["bn", 60197], ["hy", 59033], ["gu", 53335], ["ne", 52524], ["bar", 49206],
+  ["jbo", 45724], ["ilo", 44995], ["ta", 44068], ["mr", 33480], ["mn", 32562], ["si",
+  31335], ["be", 28751], ["io", 28671], ["ht", 26219], ["su", 25101], ["li", 24376],
+  ["sw", 22220], ["te", 20776], ["wuu", 20566], ["gd", 19571], ["my", 19148], ["ast",
+  17965], ["ga", 16895], ["tt", 16842], ["dv", 16512], ["vo", 14771], ["tg", 14771],
+  ["min", 14765], ["nah", 14320], ["lmo", 12630], ["kw", 12360], ["vep", 12168], ["pa",
+  12009], ["mt", 11752], ["ku", 11513], ["ie", 11208], ["yo", 9683], ["sco", 9318],
+  ["wa", 8930], ["an", 8391], ["ba", 7833], ["ce", 7695], ["tk", 7397], ["yue", 7058],
+  ["rm", 6763], ["ps", 5817], ["hsb", 5222], ["gv", 5169], ["arz", 5111], ["eml",
+  4928], ["cv", 4836], ["so", 4639], ["am", 4278], ["pnb", 4198], ["or", 4040], ["mwl",
+  3683], ["bo", 3571], ["lo", 3279], ["sa", 2939], ["mhr", 2571], ["yi", 2569], ["new",
+  2553], ["vls", 2351], ["qu", 2331], ["pam", 2322], ["ky", 2076], ["diq", 1901],
+  ["scn", 1626], ["bcl", 1540], ["mzn", 1520], ["gn", 1493], ["ug", 1456], ["as",
+  1437], ["frr", 1433], ["gom", 1425], ["xmf", 1255], ["cbk", 1087], ["azb", 1016],
+  ["vec", 992], ["nap", 988], ["os", 901], ["sd", 840], ["bxr", 807], ["sc", 649],
+  ["hbs_cyr", 646], ["sah", 575], ["dsb", 563], ["bh", 478], ["mrj", 471], ["bpy",
+  434], ["mai", 409], ["pfl", 353], ["kv", 340], ["lrc", 299], ["co", 298], ["myv",
+  260], ["lez", 212], ["tyv", 165], ["krc", 153], ["rue", 149], ["xal", 127], ["hif",
+  96], ["av", 29], ["dty", 4]]'
 src_sent_tokens: '[[0, 12086607], [1, 155798083], [2, 110067760], [3, 78082855], [4,
   48854901], [5, 56197076], [6, 28926056], [7, 23839146], [8, 18778102], [9, 16523514],
   [10, 12709982], [11, 10721380], [12, 8880117], [13, 8857015], [14, 6485115], [15,
