--- a/reports/mono-1.2/HPLT-docslite.et.yaml
+++ b/reports/mono-1.2/HPLT-docslite.et.yaml
@@ -444,6 +444,38 @@ docs_wds: '[[0.0, 53469], [0.1, 1855], [0.2, 2074], [0.3, 2340], [0.4, 3544], [0
   [9.8, 3069], [9.9, 1149], [10.0, 323]]'
 sentence_pairs: 195463992
 src_bytes: 12.24 GB
+src_langs: '[["et", 111378832], ["en", 31768585], ["fi", 8204550], ["de", 7911252],
+  ["fr", 4743402], ["cs", 3621924], ["nl", 3248506], ["it", 2566136], ["da", 2527446],
+  ["sv", 2361206], ["es", 1961013], ["pt", 1941662], ["hu", 1378256], ["tr", 1219479],
+  ["id", 1111625], ["pl", 1109565], ["nb", 986790], ["hbs_lat", 922264], ["ru", 839698],
+  ["ceb", 345294], ["ca", 326629], ["eo", 307142], ["zh", 289782], ["sl", 267106],
+  ["ja", 262161], ["lt", 257413], ["la", 229496], ["ms", 186815], ["ro", 181074],
+  ["lv", 153408], ["sk", 144842], ["nds", 142561], ["af", 140966], ["uk", 140592],
+  ["az", 125975], ["eu", 115639], ["el", 101932], ["fy", 101877], ["th", 94192], ["oc",
+  90382], ["bar", 88829], ["vi", 81837], ["ko", 78189], ["is", 77797], ["kn", 75128],
+  ["fa", 74788], ["ka", 62555], ["cy", 57787], ["nn", 54378], ["uz", 51580], ["ar",
+  47765], ["vo", 42696], ["gl", 42636], ["qu", 41727], ["bg", 36732], ["sq", 36210],
+  ["new", 33853], ["tl", 33711], ["war", 31416], ["als", 30965], ["mr", 30541], ["hi",
+  30014], ["kw", 27738], ["ne", 26522], ["km", 24849], ["he", 24381], ["ur", 23849],
+  ["bn", 22442], ["su", 22252], ["br", 21510], ["hy", 20217], ["jv", 18399], ["sw",
+  17532], ["be", 17324], ["ast", 16569], ["kk", 16533], ["ta", 14813], ["jbo", 13690],
+  ["pms", 12752], ["io", 11967], ["ml", 11291], ["mk", 11273], ["ga", 10364], ["lb",
+  9841], ["tt", 8812], ["ia", 8582], ["mn", 8030], ["mt", 7597], ["ht", 7050], ["ku",
+  6529], ["my", 5875], ["ba", 5715], ["so", 5615], ["si", 5042], ["te", 4927], ["gv",
+  4609], ["vep", 4463], ["gu", 4101], ["gom", 3765], ["ilo", 3547], ["ie", 3346],
+  ["gd", 3082], ["frr", 2787], ["co", 2610], ["mg", 2427], ["pa", 2357], ["wuu", 2318],
+  ["rm", 2253], ["arz", 2038], ["li", 1920], ["lmo", 1916], ["sco", 1810], ["gn",
+  1779], ["tg", 1741], ["min", 1690], ["tk", 1683], ["pnb", 1623], ["bo", 1611], ["an",
+  1611], ["wa", 1555], ["os", 1482], ["pam", 1323], ["diq", 1199], ["ce", 1035], ["cv",
+  1026], ["am", 991], ["mzn", 953], ["hif", 953], ["ky", 885], ["as", 865], ["yi",
+  785], ["hbs_cyr", 785], ["sa", 781], ["mwl", 769], ["yo", 763], ["nap", 729], ["ckb",
+  726], ["azb", 672], ["hsb", 669], ["or", 625], ["ps", 590], ["mhr", 568], ["sc",
+  536], ["xmf", 522], ["ug", 519], ["eml", 493], ["scn", 473], ["bxr", 473], ["lo",
+  467], ["yue", 445], ["sah", 400], ["sd", 383], ["vls", 348], ["vec", 346], ["cbk",
+  343], ["dv", 253], ["bcl", 219], ["lez", 195], ["kv", 190], ["bpy", 173], ["av",
+  168], ["mai", 137], ["nah", 115], ["bh", 105], ["tyv", 93], ["mrj", 89], ["dsb",
+  83], ["krc", 82], ["rue", 60], ["xal", 44], ["pfl", 44], ["myv", 42], ["lrc", 34],
+  ["dty", 1]]'
 src_sent_tokens: '[[0, 3023535], [1, 41851147], [2, 25946005], [3, 19848280], [4,
   14398557], [5, 18498447], [6, 10280472], [7, 6687210], [8, 5319231], [9, 4507196],
   [10, 3790390], [11, 3067257], [12, 2572656], [13, 2130664], [14, 1824509], [15,
