--- a/reports/mono-1.2/HPLT-docslite.fi.yaml
+++ b/reports/mono-1.2/HPLT-docslite.fi.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.fi.tsv
 docs_avg_lm: '[[0.0, 11], [0.1, 185], [0.2, 16171], [0.3, 96043], [0.4, 158977], [0.5,
   774038], [0.6, 1332288], [0.7, 961888], [0.8, 147273], [0.9, 2215], [1.0, 4]]'
 docs_collections: '[["cc40", 2368021], ["wide16", 1121072]]'
@@ -552,9 +553,41 @@ docs_wds: '[[0.0, 95524], [0.1, 3768], [0.2, 4206], [0.3, 5102], [0.4, 5897], [0
   83794], [8.4, 77636], [8.5, 73066], [8.6, 67300], [8.7, 64848], [8.8, 58623], [8.9,
   52283], [9.0, 48619], [9.1, 36752], [9.2, 33654], [9.3, 30109], [9.4, 26371], [9.5,
   22513], [9.6, 18363], [9.7, 11789], [9.8, 6223], [9.9, 2198], [10.0, 540]]'
-corpus: HPLT-docslite.fi.tsv
 sentence_pairs: 504776624
 src_bytes: 34.89 GB
+src_langs: '[["fi", 770327546], ["en", 115787705], ["de", 19936090], ["fr", 16678260],
+  ["cs", 13049868], ["it", 11981047], ["et", 11173836], ["es", 9016624], ["sv", 7003347],
+  ["pt", 5790044], ["nl", 5200460], ["da", 4604410], ["eo", 3710770], ["tr", 2976283],
+  ["id", 2918535], ["pl", 2836237], ["ru", 2646892], ["hbs_lat", 2539279], ["nb",
+  2471864], ["hu", 2094927], ["ms", 1991317], ["zh", 1495367], ["sl", 1468288], ["ca",
+  1405885], ["ceb", 1302417], ["lt", 1270359], ["ja", 1199944], ["ro", 861854], ["uk",
+  767501], ["eu", 596068], ["vo", 570600], ["la", 538431], ["el", 526865], ["lv",
+  478976], ["ko", 374718], ["sq", 374009], ["jbo", 363031], ["fa", 335319], ["oc",
+  312687], ["vi", 282726], ["als", 277847], ["th", 275561], ["uz", 274922], ["nn",
+  267099], ["ur", 250853], ["gl", 248646], ["war", 231593], ["sk", 215108], ["az",
+  197015], ["ar", 188780], ["ml", 176550], ["af", 168606], ["is", 150485], ["bg",
+  148283], ["fy", 131224], ["kn", 125757], ["nds", 124539], ["km", 118027], ["cy",
+  114558], ["he", 101732], ["tl", 84440], ["sw", 81462], ["ilo", 74581], ["hi", 69979],
+  ["br", 63326], ["lmo", 55518], ["ia", 54557], ["si", 52921], ["io", 49894], ["kk",
+  47291], ["hy", 46481], ["su", 43234], ["jv", 40439], ["vep", 38593], ["mk", 38470],
+  ["tt", 38274], ["gu", 37873], ["bn", 36884], ["ast", 34681], ["ta", 33995], ["lb",
+  32193], ["mt", 32016], ["ga", 31319], ["bar", 27105], ["mr", 26856], ["ne", 24597],
+  ["kw", 22480], ["sco", 21765], ["my", 20379], ["mg", 20354], ["ka", 20202], ["gv",
+  19523], ["min", 19053], ["te", 18183], ["ie", 17821], ["li", 16365], ["pms", 16004],
+  ["mn", 15996], ["be", 14383], ["ht", 11216], ["tk", 10722], ["wuu", 10265], ["so",
+  10225], ["an", 10164], ["ku", 9299], ["qu", 8104], ["bo", 7855], ["scn", 7284],
+  ["cv", 6682], ["gd", 6658], ["pa", 6645], ["ba", 6005], ["arz", 5624], ["pnb", 5592],
+  ["new", 5464], ["gn", 5035], ["wa", 4444], ["rm", 4348], ["tg", 3957], ["lo", 3882],
+  ["vec", 3572], ["hsb", 3566], ["mhr", 3534], ["ps", 3520], ["yi", 3204], ["eml",
+  3149], ["azb", 3137], ["mzn", 3098], ["ckb", 2926], ["nap", 2908], ["diq", 2889],
+  ["ky", 2864], ["ce", 2743], ["or", 2711], ["gom", 2707], ["hbs_cyr", 2516], ["sa",
+  2349], ["am", 2298], ["mwl", 2264], ["yue", 2250], ["sd", 1969], ["as", 1954], ["xmf",
+  1830], ["sah", 1776], ["cbk", 1547], ["bxr", 1471], ["frr", 1470], ["pam", 1420],
+  ["ug", 1314], ["os", 1302], ["sc", 1274], ["bpy", 1211], ["pfl", 1193], ["dv", 1182],
+  ["vls", 1089], ["dsb", 942], ["bh", 921], ["kv", 886], ["yo", 866], ["nah", 620],
+  ["lrc", 597], ["mai", 515], ["bcl", 485], ["co", 481], ["xal", 335], ["tyv", 250],
+  ["hif", 199], ["lez", 193], ["krc", 185], ["myv", 113], ["mrj", 101], ["av", 79],
+  ["rue", 55], ["dty", 10]]'
 src_sent_tokens: '[[0, 6137496], [1, 115467672], [2, 67242113], [3, 45936574], [4,
   35996202], [5, 50692306], [6, 21031796], [7, 16262058], [8, 12053232], [9, 11424167],
   [10, 9266449], [11, 7620176], [12, 6402573], [13, 5845509], [14, 4775969], [15,
