--- a/reports/mono-1.2/HPLT-docslite.hbs.yaml
+++ b/reports/mono-1.2/HPLT-docslite.hbs.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.hbs.tsv
 docs_avg_lm: '[[0.0, 5], [0.1, 811], [0.2, 12619], [0.3, 81636], [0.4, 313271], [0.5,
   1510394], [0.6, 3826221], [0.7, 2636259], [0.8, 280035], [0.9, 9931], [1.0, 3]]'
 docs_collections: '[["cc40", 3620538], ["wide16", 2622829], ["wide15", 1383087], ["wide17",
@@ -686,9 +687,42 @@ docs_total: 8680801
 docs_warnings:
 - docs_unmatching_9616
 docs_wds: '[[0.0, 8671185]]'
-corpus: HPLT-docslite.hbs.tsv
 sentence_pairs: 1140919309
 src_bytes: 66.78 GB
+src_langs: '[["hbs_lat", 571954097], ["en", 194703246], ["hbs_cyr", 77546040], ["sl",
+  37140839], ["de", 30616034], ["fr", 26356510], ["it", 23665009], ["cs", 17168997],
+  ["pl", 16793709], ["es", 14594587], ["pt", 10713108], ["ru", 10408785], ["mk", 9473927],
+  ["sv", 8441819], ["eo", 7993334], ["id", 7283215], ["hu", 6685075], ["nl", 5619472],
+  ["tr", 5010218], ["sk", 4225186], ["lt", 4047768], ["nb", 3631420], ["ceb", 3328445],
+  ["fi", 3255901], ["bg", 2834232], ["zh", 2811297], ["uk", 2463353], ["ro", 2398214],
+  ["da", 2393255], ["ca", 2139778], ["eu", 1994193], ["ja", 1805421], ["ce", 1736456],
+  ["ms", 1662051], ["rm", 1376450], ["ur", 1261758], ["vi", 1162698], ["et", 1057888],
+  ["oc", 926453], ["sq", 798725], ["tt", 667071], ["fa", 642443], ["af", 616225],
+  ["lv", 602843], ["uz", 581798], ["la", 546426], ["tl", 519403], ["el", 490019],
+  ["ar", 409772], ["az", 392620], ["ko", 377543], ["kk", 377049], ["war", 314487],
+  ["ky", 293199], ["gl", 251163], ["is", 247386], ["gom", 214460], ["ilo", 205378],
+  ["nds", 200621], ["io", 194058], ["hsb", 178434], ["br", 167462], ["be", 156886],
+  ["th", 146097], ["jv", 140579], ["nn", 137127], ["he", 133779], ["ba", 130266],
+  ["os", 125289], ["km", 122055], ["ia", 112575], ["ta", 111569], ["cy", 111169],
+  ["ne", 110337], ["pms", 109585], ["hi", 97244], ["als", 90259], ["jbo", 86980],
+  ["fy", 79556], ["lb", 77631], ["kn", 69707], ["bn", 68962], ["mhr", 64499], ["hy",
+  62892], ["ml", 61121], ["sw", 61010], ["tg", 57928], ["mn", 55200], ["vo", 54219],
+  ["sc", 51856], ["pa", 48093], ["ht", 47264], ["li", 45921], ["dsb", 42513], ["sah",
+  40116], ["ka", 39167], ["bar", 37987], ["ie", 36810], ["cv", 35181], ["si", 33850],
+  ["te", 33285], ["pam", 32875], ["co", 32270], ["bo", 28602], ["eml", 27677], ["mt",
+  25317], ["gu", 24308], ["my", 23498], ["su", 22991], ["mr", 22546], ["ku", 22072],
+  ["mwl", 21427], ["min", 19761], ["kw", 19436], ["tk", 17492], ["qu", 17336], ["ast",
+  17102], ["ug", 17002], ["wa", 16825], ["mg", 16584], ["sco", 15640], ["ga", 15468],
+  ["ckb", 14766], ["or", 14345], ["arz", 13706], ["vls", 12387], ["an", 11729], ["gd",
+  11637], ["lmo", 11356], ["wuu", 10831], ["pnb", 10235], ["am", 9870], ["ps", 9322],
+  ["gn", 8718], ["mzn", 7385], ["kv", 7313], ["so", 7127], ["sa", 6804], ["lez", 6708],
+  ["scn", 6643], ["new", 5131], ["yue", 4271], ["frr", 4173], ["xal", 3862], ["vep",
+  3842], ["azb", 3789], ["as", 3773], ["diq", 3703], ["xmf", 3685], ["gv", 3677],
+  ["cbk", 3363], ["lo", 2820], ["mrj", 2818], ["bcl", 2589], ["myv", 2583], ["dv",
+  2548], ["yi", 2426], ["nap", 2421], ["yo", 2346], ["av", 2311], ["vec", 2244], ["sd",
+  2182], ["krc", 1946], ["rue", 1588], ["bxr", 1231], ["tyv", 1192], ["nah", 1153],
+  ["bpy", 944], ["bh", 769], ["mai", 602], ["pfl", 427], ["hif", 193], ["lrc", 174],
+  ["dty", 105]]'
 src_sent_tokens: '[[0, 20748184], [1, 254290569], [2, 164518420], [3, 112083663],
   [4, 74223873], [5, 73371249], [6, 52323661], [7, 36995295], [8, 31503554], [9, 32186293],
   [10, 26565301], [11, 23817676], [12, 18681906], [13, 16627505], [14, 14173983],
