--- a/reports/mono-1.2/HPLT-docslite.he.yaml
+++ b/reports/mono-1.2/HPLT-docslite.he.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.he.tsv
 docs_avg_lm: '[[0.0, 10702], [0.1, 58565], [0.2, 274025], [0.3, 513486], [0.4, 1023760],
   [0.5, 1325390], [0.6, 1394689], [0.7, 361814], [0.8, 10778], [0.9, 111]]'
 docs_collections: '[["wide16", 2018215], ["wide15", 1292057], ["cc40", 885995], ["wide17",
@@ -555,9 +556,40 @@ docs_wds: '[[0.0, 182154], [0.1, 4046], [0.2, 4310], [0.3, 4401], [0.4, 4437], [
   97446], [8.4, 92554], [8.5, 85698], [8.6, 79109], [8.7, 69831], [8.8, 68020], [8.9,
   68089], [9.0, 71732], [9.1, 63092], [9.2, 56849], [9.3, 47414], [9.4, 36945], [9.5,
   25826], [9.6, 19544], [9.7, 13392], [9.8, 8175], [9.9, 3608], [10.0, 1167]]'
-corpus: HPLT-docslite.he.tsv
 sentence_pairs: 838116375
 src_bytes: 65.29 GB
+src_langs: '[["he", 687024695], ["en", 100004687], ["it", 6783048], ["fr", 6732808],
+  ["de", 6065391], ["es", 4888012], ["yi", 3661343], ["zh", 3189263], ["ru", 2213202],
+  ["pt", 1410091], ["cs", 1232866], ["sv", 1108160], ["nl", 1085372], ["ceb", 1045015],
+  ["fa", 940888], ["uk", 855578], ["ja", 838628], ["pl", 836550], ["ca", 730721],
+  ["hbs_lat", 604406], ["tr", 581588], ["fi", 466263], ["ar", 461458], ["da", 438245],
+  ["nb", 428765], ["id", 374597], ["el", 365525], ["ro", 325415], ["hu", 302024],
+  ["sl", 223876], ["eu", 213578], ["km", 194320], ["ko", 189045], ["vi", 184810],
+  ["oc", 181305], ["eo", 164446], ["lt", 146212], ["et", 132772], ["th", 110189],
+  ["ms", 98388], ["cy", 96931], ["jbo", 83923], ["fy", 83653], ["tg", 76483], ["sk",
+  71946], ["az", 65834], ["lv", 63337], ["la", 63223], ["kk", 60536], ["hi", 58777],
+  ["be", 56858], ["bg", 53610], ["tl", 51768], ["ur", 46855], ["mn", 46820], ["gl",
+  44091], ["af", 43624], ["kn", 43288], ["lb", 42039], ["uz", 40625], ["mk", 37737],
+  ["war", 33662], ["vep", 33418], ["is", 31862], ["nds", 30978], ["ta", 30262], ["hy",
+  26187], ["br", 24746], ["ml", 23457], ["tt", 23367], ["bn", 23068], ["bar", 22434],
+  ["nn", 22177], ["si", 20287], ["mr", 20210], ["pms", 19495], ["wuu", 19065], ["als",
+  17533], ["te", 17296], ["mhr", 17285], ["ka", 16467], ["ht", 16162], ["ne", 15611],
+  ["sq", 15198], ["jv", 12987], ["arz", 12720], ["mwl", 10907], ["sw", 10742], ["ku",
+  10442], ["ia", 9754], ["my", 9654], ["io", 8941], ["ba", 8415], ["kw", 7622], ["sah",
+  6883], ["gd", 6334], ["ast", 5976], ["min", 5789], ["gu", 5616], ["ckb", 5584],
+  ["pa", 5567], ["pnb", 5442], ["wa", 5009], ["mg", 4989], ["an", 4873], ["am", 4693],
+  ["mzn", 4539], ["vo", 4202], ["so", 3960], ["ilo", 3898], ["ie", 3694], ["su", 3667],
+  ["azb", 3257], ["ga", 3244], ["xmf", 3212], ["ce", 2876], ["cv", 2773], ["sa", 2695],
+  ["sco", 2554], ["ps", 2523], ["ug", 2488], ["yue", 2058], ["lo", 2042], ["hsb",
+  2003], ["hbs_cyr", 1805], ["bo", 1738], ["mt", 1645], ["rue", 1625], ["lmo", 1580],
+  ["sd", 1562], ["or", 1554], ["bxr", 1503], ["as", 1434], ["tk", 1210], ["nah", 1085],
+  ["new", 1080], ["gn", 1061], ["ky", 1022], ["qu", 902], ["dv", 835], ["os", 752],
+  ["gom", 621], ["cbk", 548], ["scn", 529], ["rm", 490], ["pam", 474], ["eml", 445],
+  ["bpy", 441], ["bcl", 419], ["gv", 413], ["li", 382], ["mai", 378], ["frr", 366],
+  ["tyv", 360], ["bh", 351], ["sc", 269], ["myv", 267], ["diq", 267], ["lez", 232],
+  ["xal", 231], ["krc", 221], ["mrj", 193], ["yo", 184], ["av", 133], ["nap", 132],
+  ["vec", 130], ["dsb", 128], ["vls", 127], ["kv", 125], ["lrc", 42], ["pfl", 25],
+  ["dty", 19], ["co", 15], ["hif", 2]]'
 src_sent_tokens: '[[0, 15523696], [1, 93432242], [2, 138209595], [3, 87312277], [4,
   113933015], [5, 58897680], [6, 37640797], [7, 26735776], [8, 46669871], [9, 24134140],
   [10, 20441294], [11, 14997910], [12, 12585562], [13, 11130176], [14, 10069929],
