--- a/reports/mono-1.2/HPLT-docslite.hi.yaml
+++ b/reports/mono-1.2/HPLT-docslite.hi.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.hi.tsv
 docs_avg_lm: '[[0.0, 9], [0.1, 217], [0.2, 7025], [0.3, 87903], [0.4, 555268], [0.5,
   2104635], [0.6, 2483927], [0.7, 495663], [0.8, 35341], [0.9, 1961], [1.0, 5]]'
 docs_collections: '[["cc40", 2244738], ["wide16", 2229054], ["wide17", 750758], ["wide15",
@@ -510,9 +511,41 @@ docs_wds: '[[0.0, 275944], [0.1, 26821], [0.2, 36940], [0.3, 38092], [0.4, 38414
   [8.8, 18632], [8.9, 16304], [9.0, 12551], [9.1, 10223], [9.2, 7986], [9.3, 6695],
   [9.4, 5681], [9.5, 4555], [9.6, 3877], [9.7, 2580], [9.8, 1606], [9.9, 644], [10.0,
   194]]'
-corpus: HPLT-docslite.hi.tsv
 sentence_pairs: 855081850
 src_bytes: 81.68 GB
+src_langs: '[["hi", 472198834], ["en", 260471628], ["mr", 21435655], ["es", 10417550],
+  ["fr", 9741860], ["de", 9185346], ["ne", 8236693], ["cs", 6946490], ["it", 6149479],
+  ["new", 5112849], ["bh", 4188181], ["pt", 3382312], ["da", 2661171], ["gom", 2124558],
+  ["ru", 2115913], ["sa", 2006220], ["nl", 1833961], ["id", 1660067], ["ca", 1482336],
+  ["zh", 1460554], ["sv", 1418999], ["ja", 1235722], ["mai", 955110], ["hbs_lat",
+  935964], ["fa", 920191], ["pl", 908405], ["fi", 903234], ["th", 853360], ["hu",
+  844716], ["tr", 808045], ["el", 676761], ["ar", 618750], ["ceb", 618478], ["nb",
+  598302], ["et", 589514], ["az", 459438], ["ro", 431264], ["dty", 428096], ["tl",
+  416782], ["eo", 411058], ["uk", 395814], ["bpy", 386401], ["ast", 367041], ["ko",
+  350222], ["bn", 331781], ["vi", 326499], ["sl", 310861], ["cy", 281256], ["ta",
+  261475], ["eu", 245953], ["lt", 240231], ["ms", 233024], ["te", 205429], ["su",
+  204393], ["gu", 183677], ["la", 183407], ["oc", 178756], ["ur", 166558], ["lv",
+  157173], ["ml", 144769], ["nds", 133219], ["pa", 132744], ["kn", 116475], ["sk",
+  113691], ["he", 107395], ["gl", 97323], ["ckb", 96277], ["war", 72735], ["fy", 61933],
+  ["bar", 61764], ["ga", 58791], ["as", 57611], ["uz", 56888], ["sw", 56240], ["ia",
+  55290], ["nn", 54680], ["kk", 53630], ["af", 50574], ["sq", 50554], ["hy", 48105],
+  ["ilo", 47581], ["bg", 47558], ["my", 41710], ["mt", 40594], ["br", 38043], ["lb",
+  32007], ["pms", 30691], ["mk", 29457], ["als", 29240], ["km", 27584], ["jv", 27239],
+  ["jbo", 26714], ["ht", 26125], ["gd", 25477], ["sco", 25401], ["si", 25088], ["mn",
+  23738], ["is", 23372], ["be", 23069], ["tt", 19340], ["tg", 18941], ["ie", 17738],
+  ["or", 17445], ["io", 16710], ["vo", 14635], ["qu", 14056], ["kw", 12993], ["mwl",
+  12202], ["ku", 11245], ["so", 10952], ["pnb", 10420], ["ka", 9847], ["gv", 8678],
+  ["mg", 7877], ["ce", 7790], ["ba", 6094], ["wuu", 5780], ["ky", 5407], ["pam", 4928],
+  ["arz", 4813], ["ps", 4806], ["tk", 4534], ["diq", 4498], ["cbk", 3965], ["wa",
+  3789], ["lmo", 3625], ["mzn", 3564], ["am", 3543], ["mhr", 3462], ["scn", 3459],
+  ["yo", 3329], ["min", 2977], ["xmf", 2974], ["an", 2938], ["yi", 2844], ["lo", 2746],
+  ["sc", 2744], ["bo", 2501], ["dv", 2387], ["vec", 2263], ["xal", 2088], ["azb",
+  2060], ["sd", 1995], ["li", 1992], ["sah", 1774], ["rm", 1753], ["bcl", 1485], ["gn",
+  1466], ["yue", 1431], ["hsb", 1409], ["cv", 1384], ["nah", 1366], ["ug", 1312],
+  ["eml", 1279], ["hbs_cyr", 1054], ["frr", 987], ["bxr", 876], ["kv", 647], ["vep",
+  541], ["hif", 468], ["tyv", 461], ["os", 454], ["vls", 451], ["nap", 406], ["krc",
+  378], ["mrj", 213], ["pfl", 211], ["dsb", 203], ["co", 187], ["lrc", 184], ["av",
+  168], ["myv", 137], ["lez", 76], ["rue", 17]]'
 src_sent_tokens: '[[1, 145287077], [2, 113304586], [3, 73642555], [4, 83686368], [5,
   65149159], [6, 37338705], [7, 41768710], [8, 43070667], [9, 26182348], [10, 23165499],
   [11, 20235967], [12, 18690746], [13, 15554092], [14, 14816206], [15, 12044445],
