--- a/reports/mono-1.2/HPLT-docslite.lt.yaml
+++ b/reports/mono-1.2/HPLT-docslite.lt.yaml
@@ -442,6 +442,38 @@ docs_wds: '[[0.0, 126726], [0.1, 3726], [0.2, 3078], [0.3, 4120], [0.4, 4440], [
   [9.6, 22964], [9.7, 13425], [9.8, 6786], [9.9, 2759], [10.0, 739]]'
 sentence_pairs: 332443029
 src_bytes: 21.59 GB
+src_langs: '[["lt", 216190959], ["en", 43112985], ["fr", 7587360], ["de", 7307807],
+  ["hbs_lat", 6844516], ["es", 5790629], ["eo", 4356444], ["pt", 3821569], ["pl",
+  3514613], ["it", 3478651], ["fi", 3223426], ["cs", 2585710], ["lv", 2437005], ["nl",
+  2317880], ["sv", 2309454], ["sl", 1815177], ["ru", 1524004], ["id", 1348429], ["ceb",
+  1175016], ["tr", 810507], ["ja", 672855], ["zh", 600828], ["hu", 595008], ["uk",
+  593063], ["nb", 585289], ["ca", 572291], ["gl", 570260], ["war", 559981], ["eu",
+  527235], ["sk", 472532], ["da", 433114], ["ro", 414500], ["th", 326906], ["ms",
+  325969], ["et", 307596], ["vi", 290989], ["ur", 286503], ["oc", 255697], ["nn",
+  230024], ["cy", 229379], ["fa", 199826], ["rm", 153100], ["el", 148310], ["ar",
+  131328], ["ko", 120414], ["la", 118883], ["bg", 102154], ["az", 83951], ["io", 82132],
+  ["vo", 68593], ["uz", 67861], ["sq", 66758], ["is", 63539], ["fy", 53782], ["hy",
+  51141], ["tl", 47706], ["km", 44887], ["he", 42912], ["br", 38507], ["sw", 35148],
+  ["hi", 31037], ["kk", 26621], ["mk", 26318], ["nds", 25890], ["af", 25337], ["ta",
+  25109], ["mn", 23784], ["kn", 22380], ["als", 21558], ["kw", 21541], ["si", 20782],
+  ["jv", 20589], ["ia", 18072], ["jbo", 17241], ["lb", 17082], ["bn", 16436], ["be",
+  15583], ["ml", 15363], ["ht", 14683], ["ast", 10557], ["bar", 10351], ["ilo", 10220],
+  ["mr", 10089], ["ka", 9845], ["mwl", 9552], ["mg", 8501], ["te", 7627], ["hsb",
+  6921], ["ne", 6666], ["qu", 6192], ["tt", 5620], ["mt", 5430], ["wuu", 5337], ["my",
+  5192], ["su", 5137], ["ga", 4854], ["vep", 4728], ["ie", 4710], ["lmo", 4649], ["so",
+  4397], ["pms", 4304], ["gu", 4082], ["pa", 3938], ["os", 3791], ["ku", 3731], ["hbs_cyr",
+  3449], ["an", 3212], ["min", 3209], ["gd", 2940], ["ba", 2856], ["wa", 2842], ["arz",
+  2699], ["gn", 2546], ["sco", 2503], ["tg", 2367], ["eml", 2109], ["pnb", 1990],
+  ["cv", 1976], ["ce", 1500], ["yi", 1453], ["new", 1445], ["mzn", 1406], ["am", 1358],
+  ["bo", 1317], ["sa", 1243], ["vec", 1136], ["or", 1131], ["sc", 1122], ["diq", 1098],
+  ["ps", 1093], ["li", 1020], ["gom", 1019], ["yue", 1008], ["lo", 989], ["mhr", 947],
+  ["gv", 917], ["sd", 907], ["ky", 894], ["scn", 892], ["nap", 890], ["xmf", 873],
+  ["frr", 871], ["mrj", 830], ["ckb", 820], ["as", 762], ["sah", 740], ["azb", 700],
+  ["pam", 681], ["tyv", 677], ["bxr", 647], ["ug", 613], ["cbk", 600], ["yo", 595],
+  ["dv", 480], ["pfl", 477], ["bpy", 457], ["tk", 418], ["lez", 408], ["kv", 315],
+  ["dsb", 303], ["mai", 239], ["bcl", 203], ["nah", 188], ["bh", 131], ["av", 131],
+  ["krc", 129], ["myv", 125], ["hif", 111], ["co", 101], ["vls", 86], ["xal", 84],
+  ["rue", 76], ["lrc", 61], ["dty", 1]]'
 src_sent_tokens: '[[0, 6426542], [1, 66258304], [2, 49461449], [3, 32774250], [4,
   27043465], [5, 24330403], [6, 14872772], [7, 11420478], [8, 9724090], [9, 9423109],
   [10, 7375368], [11, 6366878], [12, 5173849], [13, 4393288], [14, 3662345], [15,
