--- a/reports/mono-1.2/HPLT-docslite.lv.yaml
+++ b/reports/mono-1.2/HPLT-docslite.lv.yaml
@@ -451,6 +451,38 @@ docs_wds: '[[0.0, 47679], [0.1, 1480], [0.2, 1622], [0.3, 1869], [0.4, 2431], [0
   4679], [9.8, 2610], [9.9, 900], [10.0, 187]]'
 sentence_pairs: 185494115
 src_bytes: 11.55 GB
+src_langs: '[["lv", 112839275], ["en", 28029017], ["fr", 6415872], ["de", 4643975],
+  ["lt", 2763565], ["es", 2688321], ["nl", 2607927], ["hbs_lat", 2295484], ["it",
+  2229360], ["fi", 1682301], ["ru", 1612025], ["sl", 1580134], ["sv", 1527619], ["pt",
+  1517367], ["pl", 1371279], ["eo", 1074706], ["cs", 1029694], ["id", 850238], ["ca",
+  802977], ["eu", 545414], ["tr", 534602], ["hu", 455792], ["zh", 411636], ["nb",
+  324231], ["et", 323741], ["uk", 323604], ["sk", 318367], ["da", 313333], ["ja",
+  305420], ["ceb", 294440], ["uz", 240987], ["vi", 229013], ["ro", 220534], ["vo",
+  197116], ["la", 170585], ["gl", 152479], ["kk", 148122], ["th", 148043], ["ms",
+  123971], ["war", 110925], ["ur", 108917], ["br", 102238], ["oc", 102187], ["fa",
+  100835], ["el", 97821], ["sq", 97173], ["ar", 88402], ["hy", 75259], ["cy", 73507],
+  ["ko", 71115], ["nn", 61762], ["mg", 61289], ["bg", 57139], ["az", 55036], ["rm",
+  54511], ["mn", 50014], ["io", 49877], ["fy", 41340], ["tl", 37935], ["he", 33823],
+  ["mwl", 32300], ["ilo", 29029], ["nds", 28254], ["hi", 26708], ["mk", 26252], ["af",
+  25486], ["jv", 24982], ["als", 24895], ["is", 24814], ["km", 24447], ["ne", 24124],
+  ["bn", 23276], ["sw", 22293], ["vep", 19551], ["si", 18942], ["lb", 16284], ["ckb",
+  16219], ["bar", 15313], ["yue", 15287], ["an", 14580], ["ta", 14314], ["jbo", 13517],
+  ["hsb", 13122], ["ia", 12957], ["kn", 11857], ["ml", 11516], ["tt", 11494], ["mr",
+  10161], ["ht", 9379], ["gv", 9222], ["so", 8721], ["kw", 8286], ["mt", 8163], ["ka",
+  6735], ["su", 5805], ["be", 5505], ["mhr", 5417], ["ast", 5377], ["ga", 5149], ["pa",
+  5148], ["pms", 4988], ["te", 4912], ["gd", 4779], ["qu", 4681], ["gu", 4640], ["li",
+  4303], ["os", 4160], ["my", 3766], ["tg", 3270], ["wuu", 3173], ["nap", 3158], ["ie",
+  3061], ["ku", 2893], ["tyv", 2858], ["yo", 2797], ["lmo", 2674], ["sah", 2268],
+  ["min", 2263], ["scn", 2118], ["hbs_cyr", 2118], ["diq", 1842], ["sco", 1841], ["pnb",
+  1807], ["arz", 1781], ["tk", 1734], ["mrj", 1728], ["ky", 1726], ["as", 1620], ["gn",
+  1492], ["ba", 1456], ["ce", 1344], ["cv", 1320], ["wa", 1205], ["bo", 1202], ["am",
+  1196], ["sa", 1193], ["gom", 1159], ["azb", 1108], ["kv", 1087], ["or", 1048], ["yi",
+  998], ["cbk", 986], ["co", 842], ["sc", 823], ["bpy", 790], ["mzn", 788], ["new",
+  663], ["ps", 581], ["myv", 542], ["xmf", 530], ["lo", 494], ["bxr", 490], ["ug",
+  476], ["eml", 476], ["vec", 447], ["lez", 411], ["krc", 395], ["nah", 377], ["pam",
+  371], ["av", 353], ["lrc", 331], ["sd", 305], ["rue", 293], ["dv", 279], ["vls",
+  276], ["bcl", 223], ["bh", 175], ["frr", 150], ["mai", 143], ["dsb", 84], ["pfl",
+  58], ["xal", 55], ["hif", 13], ["dty", 10]]'
 src_sent_tokens: '[[0, 3895176], [1, 37715057], [2, 28179598], [3, 19247216], [4,
   15287478], [5, 11261562], [6, 8435162], [7, 6198883], [8, 5117430], [9, 5084940],
   [10, 3776321], [11, 3495377], [12, 3150508], [13, 2372784], [14, 2038768], [15,
