--- a/reports/mono-1.2/HPLT-docslite.ms.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ms.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.ms.tsv
 docs_avg_lm: '[[0.0, 24], [0.1, 1298], [0.2, 103340], [0.3, 172689], [0.4, 850992],
   [0.5, 1847249], [0.6, 1459624], [0.7, 392092], [0.8, 37922], [0.9, 519]]'
 docs_collections: '[["wide15", 2050535], ["wide16", 1342283], ["cc40", 1010788], ["wide17",
@@ -786,9 +787,41 @@ docs_wds: '[[0.0, 643697], [0.1, 150394], [0.2, 127443], [0.3, 119901], [0.4, 12
   [7.7, 592], [7.8, 566], [7.9, 414], [8.0, 424], [8.1, 370], [8.2, 260], [8.3, 211],
   [8.4, 180], [8.5, 173], [8.6, 120], [8.7, 106], [8.8, 91], [8.9, 81], [9.0, 65],
   [9.1, 67], [9.2, 13], [9.3, 9], [9.4, 5], [9.5, 3], [9.6, 3], [9.8, 1]]'
-corpus: HPLT-docslite.ms.tsv
 sentence_pairs: 1131639016
 src_bytes: 52.89 GB
+src_langs: '[["en", 328228834], ["id", 223808831], ["cs", 160860136], ["ms", 119612978],
+  ["de", 88813450], ["da", 32016732], ["it", 27816552], ["fr", 26370986], ["nl", 17591118],
+  ["es", 15440196], ["pt", 10144719], ["hu", 7658556], ["sv", 7291967], ["fy", 6857780],
+  ["et", 4642446], ["pl", 4316856], ["tr", 3925916], ["hbs_lat", 3658333], ["eo",
+  2893017], ["zh", 2806507], ["fi", 2624305], ["ca", 2538856], ["tl", 2294482], ["ceb",
+  2220306], ["ja", 1977096], ["ru", 1940519], ["jv", 1535101], ["ar", 1500655], ["nb",
+  1328132], ["eu", 1262384], ["uz", 1253661], ["oc", 1236521], ["sl", 1215859], ["ro",
+  830841], ["la", 814222], ["lt", 749588], ["lv", 702421], ["uk", 650027], ["su",
+  612455], ["nds", 611849], ["fa", 556223], ["el", 540169], ["sk", 492128], ["az",
+  468288], ["sw", 458744], ["ko", 458139], ["sq", 406028], ["war", 395472], ["ur",
+  366213], ["vi", 326993], ["min", 298150], ["br", 264237], ["th", 240349], ["gl",
+  209281], ["kn", 198395], ["is", 196125], ["ta", 174231], ["hi", 125324], ["af",
+  118591], ["ml", 117244], ["ilo", 110116], ["bn", 107232], ["io", 104267], ["cy",
+  100948], ["ne", 99501], ["nn", 87084], ["als", 84642], ["vo", 84467], ["bo", 82860],
+  ["mk", 82625], ["he", 78852], ["lb", 69376], ["pms", 67650], ["ie", 67246], ["hy",
+  64673], ["be", 64012], ["ia", 59768], ["km", 58765], ["pam", 58140], ["mg", 57987],
+  ["jbo", 56643], ["te", 56572], ["mzn", 55070], ["ast", 52394], ["eml", 44684], ["bg",
+  43649], ["ps", 40994], ["wuu", 38805], ["mt", 38043], ["mr", 36863], ["gd", 36469],
+  ["ht", 36443], ["bar", 34487], ["rm", 33745], ["kk", 31978], ["kw", 31966], ["wa",
+  31529], ["si", 29242], ["ku", 28306], ["ga", 26982], ["qu", 26578], ["arz", 24121],
+  ["my", 23801], ["tg", 21870], ["sco", 20833], ["ckb", 19780], ["li", 18478], ["mn",
+  18424], ["so", 17318], ["pa", 16270], ["tt", 15584], ["hsb", 15578], ["lmo", 14918],
+  ["ka", 13166], ["ba", 12360], ["gu", 12279], ["as", 12175], ["pnb", 11190], ["scn",
+  10855], ["vep", 10426], ["os", 10367], ["mhr", 9773], ["gn", 8716], ["sd", 7966],
+  ["mwl", 7860], ["diq", 7497], ["azb", 7274], ["tk", 6891], ["ce", 6833], ["bh",
+  6587], ["an", 6046], ["vls", 5514], ["cbk", 5103], ["vec", 5047], ["ky", 4550],
+  ["lrc", 4256], ["gom", 4255], ["gv", 4174], ["new", 4045], ["sah", 3856], ["co",
+  3785], ["yo", 3697], ["cv", 3542], ["ug", 3280], ["am", 3036], ["lo", 2870], ["or",
+  2784], ["bcl", 2458], ["dsb", 2196], ["yue", 2107], ["dv", 2006], ["sc", 1984],
+  ["sa", 1894], ["frr", 1849], ["yi", 1636], ["pfl", 1515], ["xmf", 1322], ["nap",
+  1222], ["xal", 1167], ["bxr", 668], ["myv", 656], ["nah", 536], ["mai", 530], ["bpy",
+  504], ["hbs_cyr", 498], ["tyv", 447], ["mrj", 440], ["lez", 435], ["hif", 277],
+  ["kv", 243], ["rue", 175], ["krc", 142], ["av", 136], ["dty", 71]]'
 src_sent_tokens: '[[0, 6282398], [1, 83027711], [2, 86876341], [3, 93534201], [4,
   71723393], [5, 156113944], [6, 293359063], [7, 37476280], [8, 30008484], [9, 29780209],
   [10, 26316665], [11, 31594613], [12, 15173324], [13, 11716397], [14, 9518161], [15,
