--- a/reports/mono-1.2/HPLT-docslite.sk.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sk.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.sk.tsv
 docs_avg_lm: '[[0.0, 11], [0.1, 32], [0.2, 1269], [0.3, 18027], [0.4, 165512], [0.5,
   1013010], [0.6, 2082602], [0.7, 1170719], [0.8, 159258], [0.9, 2735], [1.0, 17]]'
 docs_collections: '[["cc40", 2116899], ["wide16", 1118760], ["wide15", 840499], ["wide17",
@@ -544,9 +545,40 @@ docs_wds: '[[0.0, 167238], [0.1, 6780], [0.2, 8665], [0.3, 9943], [0.4, 11873], 
   [8.3, 73438], [8.4, 66368], [8.5, 61362], [8.6, 57781], [8.7, 56293], [8.8, 52127],
   [8.9, 46654], [9.0, 41241], [9.1, 36263], [9.2, 31396], [9.3, 26303], [9.4, 21077],
   [9.5, 15810], [9.6, 11556], [9.7, 7778], [9.8, 4455], [9.9, 1315], [10.0, 246]]'
-corpus: HPLT-docslite.sk.tsv
 sentence_pairs: 571311967
 src_bytes: 33.41 GB
+src_langs: '[["sk", 330007121], ["en", 77865704], ["cs", 36044221], ["pl", 15445314],
+  ["de", 14891798], ["fr", 14526366], ["hu", 10236131], ["hbs_lat", 9113267], ["es",
+  9101049], ["sl", 7610372], ["it", 7323981], ["pt", 4757508], ["sv", 4677326], ["ca",
+  3518558], ["nl", 3372140], ["ru", 2998141], ["id", 2510139], ["eo", 1714138], ["fi",
+  1139111], ["zh", 1089052], ["ceb", 930213], ["nb", 899463], ["da", 899139], ["ro",
+  865986], ["ja", 839622], ["tr", 771321], ["eu", 674314], ["lt", 637039], ["uk",
+  438944], ["et", 427436], ["oc", 375237], ["la", 369487], ["lv", 280948], ["el",
+  278759], ["ur", 270595], ["rm", 223535], ["fa", 216041], ["vi", 192912], ["gl",
+  185454], ["ar", 173822], ["ms", 172999], ["tl", 164349], ["is", 163830], ["ko",
+  157820], ["gd", 151762], ["ml", 145381], ["af", 129800], ["ga", 125648], ["az",
+  123530], ["th", 115782], ["war", 103153], ["als", 98241], ["br", 93961], ["he",
+  88137], ["bg", 79451], ["nds", 78330], ["bar", 74016], ["gu", 72830], ["cy", 69119],
+  ["hi", 67555], ["uz", 66565], ["bn", 63910], ["nn", 61645], ["fy", 61223], ["li",
+  61148], ["jv", 57450], ["km", 55851], ["vo", 52680], ["hsb", 50964], ["lb", 49466],
+  ["os", 48271], ["jbo", 46593], ["ast", 46510], ["sq", 44514], ["mk", 44229], ["hy",
+  43148], ["pms", 36720], ["pam", 34966], ["kk", 33546], ["co", 30087], ["kn", 30003],
+  ["mt", 27379], ["gom", 27033], ["ta", 26720], ["ia", 25385], ["sw", 23365], ["io",
+  19980], ["tt", 19046], ["be", 18998], ["mg", 18828], ["vep", 16263], ["ka", 13975],
+  ["ba", 12940], ["scn", 12787], ["te", 12507], ["mn", 11628], ["my", 11342], ["cbk",
+  10599], ["min", 10480], ["lmo", 10253], ["wa", 9528], ["mr", 9434], ["si", 9089],
+  ["kw", 8993], ["eml", 8711], ["yo", 7988], ["ilo", 7980], ["pa", 7956], ["su", 7741],
+  ["yue", 7701], ["ne", 6934], ["ckb", 6480], ["tk", 6472], ["an", 6172], ["ku", 5943],
+  ["so", 5807], ["ie", 5741], ["dsb", 5408], ["wuu", 4916], ["vls", 4597], ["ht",
+  4396], ["sco", 4231], ["sa", 4196], ["as", 3995], ["ky", 3675], ["qu", 3622], ["mwl",
+  3408], ["bo", 3381], ["frr", 3300], ["tg", 3262], ["arz", 3095], ["ce", 3063], ["pnb",
+  3033], ["diq", 2888], ["yi", 2866], ["gn", 2740], ["cv", 2698], ["new", 2659], ["azb",
+  2534], ["ps", 2447], ["or", 1828], ["lo", 1724], ["xal", 1662], ["am", 1475], ["sah",
+  1333], ["vec", 1221], ["kv", 1176], ["mzn", 1101], ["sc", 1044], ["ug", 982], ["xmf",
+  921], ["lrc", 893], ["nap", 805], ["mhr", 801], ["bcl", 722], ["bh", 720], ["gv",
+  715], ["hbs_cyr", 711], ["nah", 692], ["sd", 645], ["bxr", 618], ["dv", 571], ["hif",
+  440], ["rue", 404], ["mrj", 391], ["pfl", 364], ["bpy", 333], ["mai", 266], ["myv",
+  237], ["lez", 202], ["av", 202], ["tyv", 198], ["krc", 146], ["dty", 18]]'
 src_sent_tokens: '[[0, 10003849], [1, 116827693], [2, 94044431], [3, 62501927], [4,
   42095707], [5, 36239956], [6, 24296067], [7, 19753884], [8, 15750373], [9, 15118984],
   [10, 12146379], [11, 10865451], [12, 9220304], [13, 8182284], [14, 6329198], [15,
