--- a/reports/mono-1.2/HPLT-docslite.sl.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sl.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.sl.tsv
 docs_avg_lm: '[[0.0, 2], [0.1, 37], [0.2, 1620], [0.3, 21491], [0.4, 130388], [0.5,
   556174], [0.6, 903180], [0.7, 517262], [0.8, 63436], [0.9, 1677], [1.0, 9]]'
 docs_collections: '[["cc40", 1020994], ["wide16", 480315], ["wide15", 440761], ["wide17",
@@ -428,9 +429,40 @@ docs_wds: '[[0.0, 53430], [0.1, 1568], [0.2, 1666], [0.3, 1994], [0.4, 2558], [0
   36895], [8.5, 34096], [8.6, 32174], [8.7, 30940], [8.8, 29210], [8.9, 25645], [9.0,
   22497], [9.1, 19868], [9.2, 17567], [9.3, 15222], [9.4, 13395], [9.5, 10534], [9.6,
   7808], [9.7, 4903], [9.8, 2455], [9.9, 923], [10.0, 182]]'
-corpus: HPLT-docslite.sl.tsv
 sentence_pairs: 285527540
 src_bytes: 15.65 GB
+src_langs: '[["sl", 158456731], ["en", 44776328], ["hbs_lat", 10571935], ["de", 9615236],
+  ["fr", 8405823], ["cs", 8079752], ["pl", 7473514], ["it", 5020886], ["sk", 3805831],
+  ["es", 3437105], ["da", 2430046], ["pt", 2254017], ["sv", 2104306], ["eo", 2090816],
+  ["nl", 1695281], ["fi", 1362650], ["lt", 1308066], ["id", 998494], ["hu", 919499],
+  ["nb", 914957], ["ru", 911007], ["tr", 792622], ["zh", 663196], ["ceb", 555223],
+  ["ca", 509910], ["ro", 501212], ["ms", 455848], ["ja", 436966], ["et", 367136],
+  ["ur", 364337], ["lv", 337283], ["eu", 307102], ["uk", 252659], ["oc", 225327],
+  ["la", 178315], ["fa", 167607], ["als", 147365], ["el", 138477], ["nn", 120911],
+  ["vi", 119771], ["sq", 116264], ["hsb", 108840], ["ar", 106876], ["tl", 101657],
+  ["rm", 98810], ["uz", 97456], ["ko", 93351], ["af", 87914], ["az", 87075], ["th",
+  77582], ["bg", 70700], ["war", 69075], ["io", 63933], ["tt", 62432], ["fy", 54029],
+  ["ia", 53904], ["km", 51802], ["is", 48642], ["gl", 47508], ["br", 44196], ["cy",
+  38535], ["nds", 38253], ["he", 37619], ["ml", 36615], ["hi", 34136], ["bar", 30344],
+  ["kk", 29866], ["ilo", 27542], ["jbo", 24364], ["mk", 23348], ["lb", 23066], ["kn",
+  22330], ["dsb", 22313], ["sw", 21745], ["bn", 21459], ["hy", 19075], ["jv", 17133],
+  ["ht", 15852], ["pms", 15633], ["ka", 15467], ["ta", 14449], ["gu", 12884], ["kw",
+  11310], ["vo", 11172], ["be", 10345], ["tg", 9464], ["ast", 9031], ["ne", 8518],
+  ["mn", 8371], ["os", 8364], ["mt", 8295], ["su", 7960], ["pnb", 7901], ["si", 7861],
+  ["lmo", 7822], ["mr", 7741], ["pam", 7688], ["te", 6810], ["mg", 6461], ["li", 6416],
+  ["ba", 6081], ["wa", 5902], ["my", 4729], ["ku", 4179], ["sco", 4055], ["or", 3851],
+  ["eml", 3797], ["an", 3662], ["min", 3596], ["ie", 3592], ["ga", 3493], ["arz",
+  3258], ["wuu", 3017], ["gd", 2967], ["vep", 2960], ["pa", 2944], ["tk", 2703], ["mwl",
+  2677], ["scn", 2531], ["am", 2203], ["ug", 2088], ["yo", 2039], ["so", 1804], ["bo",
+  1770], ["yue", 1686], ["sa", 1620], ["qu", 1609], ["sc", 1509], ["mzn", 1423], ["ps",
+  1420], ["gn", 1376], ["azb", 1259], ["dv", 1227], ["nap", 1063], ["gom", 955], ["co",
+  943], ["ckb", 900], ["av", 894], ["lo", 856], ["xmf", 823], ["ce", 815], ["sah",
+  808], ["cv", 800], ["sd", 797], ["cbk", 792], ["hbs_cyr", 786], ["mhr", 779], ["new",
+  778], ["ky", 739], ["bxr", 712], ["diq", 681], ["vec", 661], ["as", 625], ["yi",
+  542], ["gv", 533], ["kv", 422], ["nah", 415], ["lez", 365], ["krc", 319], ["rue",
+  252], ["bcl", 244], ["bpy", 238], ["vls", 227], ["mai", 204], ["tyv", 178], ["frr",
+  153], ["xal", 142], ["lrc", 106], ["mrj", 99], ["pfl", 95], ["bh", 85], ["myv",
+  44], ["hif", 30], ["dty", 3]]'
 src_sent_tokens: '[[0, 5909666], [1, 58160228], [2, 48485530], [3, 31143306], [4,
   21109117], [5, 21221360], [6, 11863076], [7, 9364824], [8, 7616063], [9, 6789939],
   [10, 5652927], [11, 5238114], [12, 3970975], [13, 3212127], [14, 2662886], [15,
