--- a/reports/mono-1.2/HPLT-docslite.sq.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sq.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.sq.tsv
 docs_avg_lm: '[[0.1, 2], [0.2, 36], [0.3, 347], [0.4, 2981], [0.5, 17284], [0.6, 107317],
   [0.7, 572933], [0.8, 523300], [0.9, 16088], [1.0, 33]]'
 docs_collections: '[["cc40", 510193], ["wide16", 363085], ["wide17", 200075], ["wide15",
@@ -328,9 +329,40 @@ docs_wds: '[[0.0, 97687], [0.1, 665], [0.2, 736], [0.3, 645], [0.4, 758], [0.5, 
   [8.7, 11872], [8.8, 10848], [8.9, 9392], [9.0, 8486], [9.1, 7587], [9.2, 6883],
   [9.3, 5889], [9.4, 5029], [9.5, 4088], [9.6, 3261], [9.7, 2349], [9.8, 1332], [9.9,
   522], [10.0, 90]]'
-corpus: HPLT-docslite.sq.tsv
 sentence_pairs: 147604123
 src_bytes: 8.09 GB
+src_langs: '[["sq", 68528645], ["en", 34685744], ["it", 4946447], ["es", 3518844],
+  ["de", 3294743], ["fr", 3111236], ["hbs_lat", 3103182], ["sv", 2963572], ["id",
+  2144903], ["cs", 2103559], ["pt", 1722501], ["eo", 1472743], ["tr", 1424419], ["nl",
+  1298393], ["fi", 1235785], ["pl", 1216012], ["ca", 791465], ["ceb", 764303], ["ro",
+  746239], ["da", 712905], ["sl", 707357], ["nb", 660337], ["lt", 519260], ["ru",
+  412250], ["et", 404598], ["hu", 356044], ["war", 353706], ["zh", 337800], ["ur",
+  272355], ["ms", 268871], ["ja", 231332], ["vi", 198468], ["eu", 170318], ["az",
+  155483], ["br", 140661], ["fa", 135584], ["uz", 118500], ["af", 116020], ["sk",
+  112720], ["ilo", 108923], ["vo", 104118], ["nn", 98565], ["sco", 98185], ["rm",
+  97896], ["ia", 91462], ["la", 87702], ["lv", 87317], ["oc", 85043], ["uk", 84033],
+  ["tl", 83648], ["el", 64753], ["tg", 58770], ["ar", 56360], ["io", 55181], ["th",
+  50824], ["fy", 49158], ["pms", 46258], ["wa", 43081], ["ko", 41181], ["nds", 37979],
+  ["jv", 34507], ["is", 32280], ["gl", 32211], ["hy", 26038], ["mg", 24749], ["kn",
+  23925], ["bg", 22853], ["dv", 19721], ["als", 19379], ["so", 19007], ["frr", 17539],
+  ["mk", 16217], ["ka", 15370], ["lmo", 14803], ["hi", 14780], ["kk", 14014], ["bn",
+  13241], ["ml", 13120], ["ast", 12402], ["min", 12172], ["km", 11647], ["ga", 11453],
+  ["he", 10932], ["pa", 10857], ["bar", 10773], ["ta", 10749], ["kw", 10545], ["qu",
+  10513], ["cy", 10507], ["sw", 10321], ["te", 9537], ["nah", 9054], ["mn", 8871],
+  ["be", 8585], ["ckb", 8496], ["ku", 8166], ["su", 7800], ["ne", 7702], ["hsb", 6789],
+  ["mr", 6629], ["jbo", 6577], ["lb", 6476], ["ht", 6092], ["ba", 5445], ["ie", 5134],
+  ["sc", 3802], ["mzn", 3638], ["mwl", 3347], ["my", 3207], ["si", 3192], ["gn", 2903],
+  ["tt", 2699], ["ps", 2698], ["am", 2669], ["gv", 2370], ["gu", 2336], ["arz", 2132],
+  ["co", 2126], ["scn", 2125], ["li", 2051], ["gd", 1966], ["cv", 1906], ["ug", 1781],
+  ["pnb", 1627], ["mt", 1559], ["gom", 1489], ["sa", 1453], ["bo", 1429], ["diq",
+  1410], ["an", 1159], ["or", 1153], ["hbs_cyr", 1041], ["azb", 1031], ["ky", 732],
+  ["tk", 703], ["xmf", 685], ["wuu", 615], ["as", 608], ["yue", 601], ["vep", 595],
+  ["mhr", 582], ["kv", 504], ["lo", 500], ["bxr", 495], ["eml", 483], ["sd", 462],
+  ["new", 409], ["pam", 408], ["ce", 404], ["vls", 325], ["cbk", 309], ["yi", 261],
+  ["nap", 257], ["bcl", 256], ["yo", 232], ["bh", 229], ["sah", 188], ["tyv", 179],
+  ["os", 173], ["bpy", 168], ["mrj", 149], ["vec", 145], ["mai", 134], ["dsb", 128],
+  ["hif", 125], ["krc", 97], ["lez", 76], ["lrc", 45], ["xal", 39], ["myv", 22], ["av",
+  17], ["rue", 15], ["pfl", 12]]'
 src_sent_tokens: '[[0, 1297580], [1, 42653326], [2, 16000740], [3, 13131488], [4,
   8066321], [5, 7879443], [6, 4906083], [7, 4596601], [8, 4312191], [9, 4364400],
   [10, 3663018], [11, 3797588], [12, 3092229], [13, 2890872], [14, 2341027], [15,
