--- a/reports/mono-1.2/HPLT-docslite.ta.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ta.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.ta.tsv
 docs_avg_lm: '[[0.0, 2], [0.1, 15], [0.2, 140], [0.3, 2517], [0.4, 29390], [0.5, 155473],
   [0.6, 494281], [0.7, 464443], [0.8, 94279], [0.9, 1623], [1.0, 4]]'
 docs_collections: '[["wide15", 479433], ["cc40", 417159], ["wide16", 229741], ["wide17",
@@ -417,9 +418,39 @@ docs_wds: '[[0.0, 64479], [0.1, 1793], [0.2, 1659], [0.3, 1845], [0.4, 2143], [0
   [8.6, 20225], [8.7, 19824], [8.8, 19004], [8.9, 16680], [9.0, 15374], [9.1, 13942],
   [9.2, 12728], [9.3, 11620], [9.4, 10385], [9.5, 9207], [9.6, 7463], [9.7, 4831],
   [9.8, 2705], [9.9, 907], [10.0, 195]]'
-corpus: HPLT-docslite.ta.tsv
 sentence_pairs: 217408557
 src_bytes: 33.99 GB
+src_langs: '[["ta", 129200653], ["en", 58066830], ["cs", 10417720], ["da", 4099104],
+  ["de", 3369689], ["fr", 2793414], ["es", 1843860], ["it", 1429001], ["pt", 571651],
+  ["nl", 474197], ["sv", 404548], ["zh", 367361], ["ru", 299345], ["pl", 288203],
+  ["fi", 260537], ["id", 253664], ["ja", 218884], ["hu", 213848], ["el", 186742],
+  ["ca", 185115], ["hbs_lat", 170242], ["hi", 155940], ["fa", 153203], ["uk", 143662],
+  ["nb", 140986], ["tr", 128919], ["et", 115137], ["ar", 98047], ["ceb", 96409], ["te",
+  81810], ["eo", 80152], ["az", 79069], ["ms", 71583], ["ko", 57122], ["ml", 54473],
+  ["eu", 49262], ["sl", 43762], ["oc", 42283], ["ne", 42077], ["bn", 37532], ["lt",
+  36171], ["tl", 35634], ["kn", 34483], ["la", 34425], ["sk", 33608], ["mr", 30715],
+  ["vi", 30027], ["ro", 26734], ["si", 24775], ["gu", 24123], ["th", 21885], ["uz",
+  17872], ["km", 16381], ["sa", 16344], ["ur", 16178], ["lv", 16106], ["af", 15959],
+  ["war", 14629], ["pa", 14282], ["fy", 11761], ["is", 11286], ["hy", 10964], ["mzn",
+  10687], ["nds", 10196], ["br", 10162], ["ia", 9835], ["sq", 9281], ["he", 9235],
+  ["pam", 8589], ["gl", 8405], ["mk", 7950], ["bar", 7256], ["ce", 7092], ["ckb",
+  6803], ["als", 6790], ["cy", 6317], ["lb", 6272], ["my", 6204], ["jv", 5670], ["bg",
+  4408], ["su", 4083], ["kk", 3832], ["ps", 3404], ["nn", 3136], ["pms", 3135], ["ka",
+  3080], ["dsb", 2956], ["jbo", 2875], ["io", 2752], ["ku", 2670], ["sw", 2593], ["sco",
+  2573], ["ga", 2489], ["or", 2454], ["gn", 2439], ["gd", 2432], ["ast", 2403], ["mwl",
+  2294], ["ilo", 2212], ["wuu", 2080], ["ht", 2001], ["be", 1957], ["as", 1889], ["arz",
+  1839], ["tg", 1759], ["mn", 1713], ["lo", 1566], ["pnb", 1393], ["kw", 1379], ["ie",
+  1328], ["tt", 1299], ["min", 1283], ["new", 1171], ["azb", 1117], ["gom", 1101],
+  ["bo", 1082], ["ky", 1064], ["ba", 1061], ["vo", 1017], ["mg", 974], ["an", 934],
+  ["mt", 902], ["li", 892], ["yue", 691], ["am", 671], ["qu", 664], ["bh", 655], ["xmf",
+  639], ["sd", 609], ["ug", 565], ["so", 528], ["lmo", 510], ["dv", 479], ["bxr",
+  468], ["mhr", 422], ["vep", 390], ["wa", 375], ["hsb", 365], ["tk", 355], ["cv",
+  344], ["diq", 328], ["bpy", 265], ["yi", 250], ["hbs_cyr", 205], ["sah", 204], ["rm",
+  188], ["frr", 188], ["gv", 180], ["bcl", 177], ["krc", 135], ["mai", 115], ["scn",
+  114], ["tyv", 111], ["vec", 86], ["eml", 68], ["sc", 66], ["cbk", 65], ["myv", 51],
+  ["dty", 51], ["nap", 48], ["yo", 43], ["os", 35], ["kv", 35], ["lrc", 26], ["nah",
+  24], ["vls", 19], ["mrj", 17], ["co", 16], ["xal", 10], ["av", 9], ["hif", 8], ["lez",
+  6], ["pfl", 4], ["rue", 3]]'
 src_sent_tokens: '[[0, 2027806], [1, 30940537], [2, 22541655], [3, 15906012], [4,
   17788267], [5, 35266464], [6, 15696954], [7, 8715492], [8, 7111813], [9, 6562332],
   [10, 5639036], [11, 6371591], [12, 3200057], [13, 2716078], [14, 2357851], [15,
