--- a/reports/mono-1.2/HPLT-docslite.ur.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ur.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.ur.tsv
 docs_avg_lm: '[[0.0, 15], [0.1, 108], [0.2, 10501], [0.3, 174427], [0.4, 718886],
   [0.5, 271457], [0.6, 222861], [0.7, 36274], [0.8, 1783], [0.9, 48]]'
 docs_collections: '[["wide16", 873590], ["cc40", 352223], ["wide17", 121245], ["wide15",
@@ -346,9 +347,39 @@ docs_wds: '[[0.0, 37342], [0.1, 3284], [0.2, 8290], [0.3, 15737], [0.4, 25719], 
   [8.6, 6543], [8.7, 6442], [8.8, 5708], [8.9, 5839], [9.0, 4646], [9.1, 4073], [9.2,
   2812], [9.3, 2231], [9.4, 1838], [9.5, 1333], [9.6, 1023], [9.7, 687], [9.8, 443],
   [9.9, 188], [10.0, 54]]'
-corpus: HPLT-docslite.ur.tsv
 sentence_pairs: 136409453
 src_bytes: 10.61 GB
+src_langs: '[["ur", 64663913], ["en", 31141846], ["fa", 14907916], ["pnb", 4879083],
+  ["ar", 3922146], ["de", 3634696], ["fr", 2811575], ["es", 1881664], ["it", 1375093],
+  ["cy", 697675], ["pt", 493547], ["nl", 480619], ["ru", 356160], ["ca", 298983],
+  ["sv", 278769], ["cs", 250971], ["ps", 249834], ["id", 239415], ["mzn", 238808],
+  ["zh", 193598], ["pl", 188025], ["ja", 180813], ["azb", 162906], ["da", 156372],
+  ["tr", 134851], ["arz", 132101], ["hbs_lat", 125610], ["nb", 118315], ["lb", 113348],
+  ["scn", 111683], ["ko", 105804], ["sd", 99315], ["ceb", 94678], ["hu", 93153], ["af",
+  88861], ["hi", 87552], ["eo", 86609], ["vi", 79117], ["fi", 77070], ["az", 76202],
+  ["ro", 73809], ["ckb", 62306], ["bn", 61251], ["ms", 55584], ["el", 50682], ["lt",
+  49865], ["oc", 47463], ["ne", 45877], ["he", 42204], ["si", 42201], ["mr", 39557],
+  ["hsb", 38631], ["sl", 34942], ["ml", 33893], ["pa", 31937], ["gl", 31651], ["nn",
+  30675], ["uk", 30643], ["eu", 29313], ["et", 29275], ["km", 28147], ["th", 26397],
+  ["la", 25993], ["tl", 25669], ["war", 25404], ["kn", 23200], ["ilo", 21526], ["ta",
+  21360], ["uz", 20332], ["lv", 19602], ["su", 18136], ["fy", 15816], ["jbo", 15548],
+  ["sk", 15464], ["lmo", 14532], ["my", 12071], ["als", 11211], ["br", 11128], ["bg",
+  10539], ["sw", 10475], ["sq", 9461], ["mk", 9433], ["ia", 9402], ["kk", 9029], ["bar",
+  8663], ["tt", 7664], ["ie", 7409], ["jv", 6696], ["hy", 6678], ["te", 6622], ["nds",
+  6253], ["sco", 5675], ["ug", 5526], ["gu", 5453], ["nah", 5373], ["ku", 4479], ["lrc",
+  4462], ["ht", 3819], ["mg", 3735], ["am", 3726], ["vo", 3556], ["xmf", 3432], ["is",
+  3227], ["ka", 3018], ["sa", 2979], ["tg", 2880], ["mn", 2804], ["io", 2512], ["so",
+  2360], ["be", 2082], ["kw", 1991], ["lo", 1873], ["mwl", 1744], ["new", 1506], ["ga",
+  1464], ["dv", 1460], ["pms", 1378], ["as", 1354], ["mt", 1275], ["or", 1237], ["gd",
+  1227], ["an", 1182], ["ast", 1064], ["gn", 839], ["wuu", 778], ["min", 758], ["gv",
+  750], ["os", 720], ["sah", 694], ["co", 672], ["mhr", 624], ["ce", 559], ["wa",
+  558], ["bo", 558], ["gom", 520], ["ba", 488], ["qu", 459], ["sc", 424], ["hbs_cyr",
+  361], ["yi", 357], ["cv", 356], ["bxr", 276], ["yo", 251], ["eml", 208], ["cbk",
+  205], ["bcl", 193], ["yue", 186], ["bh", 171], ["li", 163], ["myv", 157], ["diq",
+  157], ["rm", 155], ["pam", 154], ["tk", 136], ["nap", 129], ["bpy", 122], ["ky",
+  119], ["mai", 103], ["frr", 103], ["vep", 101], ["tyv", 100], ["vls", 98], ["krc",
+  87], ["dsb", 86], ["vec", 80], ["kv", 72], ["mrj", 49], ["dty", 46], ["rue", 36],
+  ["lez", 30], ["av", 23], ["pfl", 22], ["xal", 19], ["hif", 13]]'
 src_sent_tokens: '[[1, 20727743], [2, 17357415], [3, 11496724], [4, 10235036], [5,
   9729725], [6, 7026317], [7, 4985139], [8, 4653213], [9, 4073842], [10, 6254013],
   [11, 3866270], [12, 3776789], [13, 2659045], [14, 2411300], [15, 1991637], [16,
